--- a/templates/accounts/settings.html
+++ b/templates/accounts/settings.html
@@ -98,13 +98,13 @@
                                             <label class="block text-gray-700 font-medium mb-2">First Name</label>
                                             <input type="text" name="first_name" value="{{ request.user.first_name|default:'' }}" 
                                                    class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-900 focus:border-transparent"
-                                                   placeholder="Enter your first name">
+                                                   placeholder="Enter your first name" disabled>
                                         </div>
-                                        <div>
+                                        <div>                                           
                                             <label class="block text-gray-700 font-medium mb-2">Last Name</label>
                                             <input type="text" name="last_name" value="{{ request.user.last_name|default:'' }}"
                                                    class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-900 focus:border-transparent"
-                                                   placeholder="Enter your last name">
+                                                   placeholder="Enter your last name" disabled>
                                         </div>
                                     </div>
                                     
