--- a/templates/blog/blog-detail.html
+++ b/templates/blog/blog-detail.html
@@ -346,6 +346,7 @@
             </div>
         </div>
     </section>
+    {% include 'includes/footer.html' %}
 {% endblock %}
 
 {% block extra_css %}
