--- a/templates/accounts/about.html
+++ b/templates/accounts/about.html
@@ -8,14 +8,10 @@
     <style>element.style {
     background-color: darkblue;
 }
-.text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-    background-color: darkblue;
-}
+
 </style>
 
-    <section class="hero-bg text-white py-20">
+    <section class="hero-bg text-white py-20" style="background-color: darkblue;">
         <div class="container mx-auto px-4 text-center">
             <h1 class="text-4xl md:text-5xl font-bold mb-6" data-aos="fade-up">About DreamHomes Realty</h1>
             <p class="text-xl max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="200">
@@ -275,6 +271,6 @@
     </section>
 
     <!-- Footer -->
-     {% include 'includes/footer.html' %}
+     
     
 {% endblock %}
