--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -59,7 +59,7 @@
                 <!-- Mobile User Icon -->
                 <div class="md:hidden">
                     <button id="mobile-user-button" class="flex items-center p-2">
-                        <img src="{% if user.profile.profile_picture %}{{ user.profile.profile_picture.url }}{% else %}https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80{% endif %}" 
+                        <img src="{% if user.profile.profile_picture %}{{ user.profile.profile_picture.url }}{% else %}https://tse3.mm.bing.net/th/id/OIP.4czxjq7uqtqUzrUmEbp16AAAAA?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3{% endif %}" 
      alt="User" class="w-8 h-8 rounded-full">
 
                     </button>
