--- a/templates/properties/property_list.html
+++ b/templates/properties/property_list.html
@@ -239,8 +239,8 @@
             {% if user.is_authenticated %}
             <div class="relative group">
                 <button class="flex items-center space-x-2 bg-gray-100 hover:bg-gray-200 rounded-full px-3 py-2 transition">
-                    <img src="{% if user.profile.profile_picture %}{{ user.profile.profile_picture.url }}{% else %}https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80{% endif %}" 
-                        alt="User" class="w-8 h-8 rounded-full">
+                    <img src="{% if user.profile.profile_picture %}{{ user.profile.profile_picture.url }}{% else %}https://tse3.mm.bing.net/th/id/OIP.4czxjq7uqtqUzrUmEbp16AAAAA?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3{% endif %}" 
+     alt="User" class="w-8 h-8 rounded-full">
                     <span class="text-gray-700">Welcome, {{ user.first_name|default:user.username }}</span>
                     <i class="fas fa-chevron-down text-gray-600 text-sm"></i>
                 </button>
@@ -271,8 +271,8 @@
             {% if user.is_authenticated %}
             <div class="md:hidden">
                 <button id="mobile-user-button" class="flex items-center p-2">
-                    <img src="{% if user.profile.profile_picture %}{{ user.profile.profile_picture.url }}{% else %}https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80{% endif %}" 
-                        alt="User" class="w-8 h-8 rounded-full">
+                    <img src="{% if user.profile.profile_picture %}{{ user.profile.profile_picture.url }}{% else %}https://tse3.mm.bing.net/th/id/OIP.4czxjq7uqtqUzrUmEbp16AAAAA?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3{% endif %}" 
+     alt="User" class="w-8 h-8 rounded-full">
                 </button>
             </div>
             {% endif %}
